--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,19 @@
     "type": "library",
     "description": "Ecommerce system",
     "minimum-stability": "dev",
+  "repositories": [
+    {
+      "type": "path",
+      "url": "../location"
+    }
+  ],
  "require": {
     "php": "~7",
     "laravel/framework": "5.5.*",
     "guzzlehttp/guzzle": "~6.0",
     "doctrine/dbal": "^2.5",
-    "ramsey/uuid": "^3.6"
+    "ramsey/uuid": "^3.6",
+    "railroad/location" : "@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
