--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
     {
       "type": "path",
       "url": "../location"
+    },
+    {
+      "type": "path",
+      "url": "../remotestorage"
     }
   ],
  "require": {
@@ -16,7 +20,8 @@
     "guzzlehttp/guzzle": "~6.0",
     "doctrine/dbal": "^2.5",
     "ramsey/uuid": "^3.6",
-    "railroad/location" : "@dev"
+    "railroad/location" : "@dev",
+    "railroad/remotestorage" : "@dev"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
