ECOMMERCE-1 As a user I can CRUD my addresses via a JSON API (database). As an admin I can CRUD any users or customers addresses. - WIP

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "doctrine/dbal": "^2.5",
     "ramsey/uuid": "^3.6",
     "railroad/location" : "@dev",
-    "railroad/remotestorage" : "@dev"
+    "railroad/remotestorage" : "@dev",
+    "webpatser/laravel-countries": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
