--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "railroad/location": "@dev",
     "railroad/permissions": "5.61.03",
     "railroad/remotestorage": "@dev",
-    "webpatser/laravel-countries": "dev-master",
+    "webpatser/laravel-countries": "1.5.4",
     "stripe/stripe-php": "^4.4",
     "railroad/resora": "0.0.03"
   },
