--- a/composer.json
+++ b/composer.json
@@ -25,18 +25,19 @@
     "doctrine/dbal": "^2.5",
     "ramsey/uuid": "^3.6",
     "railroad/location": "@dev",
-    "railroad/permissions": "5.61.03",
+    "railroad/permissions": "dev-config-control-and-resora-integration",
     "railroad/remotestorage": "@dev",
     "webpatser/laravel-countries": "1.5.4",
     "stripe/stripe-php": "^4.4",
-    "railroad/resora": "0.0.03"
+    "railroad/resora": "dev-master"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
     "phpunit/php-code-coverage": "6.0.1",
     "orchestra/database": "3.6.x@dev",
     "orchestra/testbench": "~3.6",
-    "filp/whoops": "~2.1"
+    "filp/whoops": "~2.1",
+    "mockery/mockery": "^1.0"
   },
   "autoload": {
     "psr-4": {
