--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
     "doctrine/dbal": "^2.5",
     "ramsey/uuid": "^3.6",
     "railroad/location": "@dev",
-    "railroad/permissions": "dev-config-control-and-resora-integration",
+    "railroad/permissions": "5.61.03",
     "railroad/remotestorage": "@dev",
     "webpatser/laravel-countries": "1.5.4",
     "stripe/stripe-php": "^4.4",
-    "railroad/resora": "dev-master"
+    "railroad/resora": "0.0.03"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
