--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,10 @@
     {
       "type": "path",
       "url": "../remotestorage"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/railroadmedia/response"
     }
   ],
   "require": {
@@ -27,9 +31,11 @@
     "railroad/location": "5.60.04",
     "railroad/permissions": "5.61.06",
     "railroad/remotestorage": "@dev",
+    "railroad/response": "0.0.1",
     "webpatser/laravel-countries": "1.5.4",
     "stripe/stripe-php": "^4.4",
-    "railroad/resora": "0.0.04"
+    "railroad/resora": "5.60.01",
+    "spatie/laravel-fractal":"5.3.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
