--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
     "railroad/response": "0.0.1",
     "webpatser/laravel-countries": "1.5.4",
     "stripe/stripe-php": "^4.4",
-    "railroad/resora": "5.60.01",
-    "spatie/laravel-fractal":"5.3.2"
+    "railroad/resora": "5.60.01"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
