--- a/composer.json
+++ b/composer.json
@@ -28,13 +28,13 @@
     "guzzlehttp/guzzle": "~6.0",
     "doctrine/dbal": "^2.5",
     "ramsey/uuid": "^3.6",
-    "railroad/location": "5.60.04",
-    "railroad/permissions": "5.61.*",
-    "railroad/remotestorage": "@dev",
-    "railroad/resora": "5.60.*",
-    "railroad/response": "0.0.*",
     "webpatser/laravel-countries": "1.5.4",
-    "stripe/stripe-php": "^4.4"
+    "stripe/stripe-php": "^4.4",
+    "railroad/location": "^1.0",
+    "railroad/permissions": "^1.0",
+    "railroad/remotestorage": "^1.0",
+    "railroad/resora": "^1.0",
+    "railroad/response": "0.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
