--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
   "name": "railroad/ecommerce",
   "type": "library",
   "description": "Ecommerce system",
-  "minimum-stability": "dev",
   "prefer-stable": true,
   "repositories": [
     {
@@ -27,10 +26,10 @@
     "webpatser/laravel-countries": "1.5.4",
     "stripe/stripe-php": "^4.4",
     "railroad/location": "^1.0",
-    "railroad/permissions": "^1.0",
+    "railroad/permissions": "0.0.02",
     "railroad/remotestorage": "^1.0",
-    "railroad/resora": "^1.0",
-    "railroad/response": "0.0.*"
+    "railroad/resora": "0.0.05",
+    "railroad/response": "0.0.06"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
