--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
     "webpatser/laravel-countries": "1.5.4",
     "stripe/stripe-php": "^4.4",
     "railroad/location": "^1.0",
-    "railroad/permissions": "0.0.02",
+    "railroad/permissions": "^1.0",
     "railroad/remotestorage": "^1.0",
-    "railroad/resora": "0.0.05",
+    "railroad/resora": "^1.0",
     "railroad/response": "0.0.06"
   },
   "require-dev": {
