--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "railroad/permissions": "^1.0",
     "railroad/remotestorage": "^1.0",
     "railroad/resora": "^1.0",
-    "railroad/response": "^1.0"
+    "railroad/response": "^1.0",
+    "railroad/usora": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
