--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     "railroad/remotestorage": "^1.0",
     "railroad/resora": "^1.0",
     "railroad/response": "^1.0",
-    "railroad/usora": "^1.0"
+    "railroad/usora": "0.0.42"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
