--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,12 @@
     "railroad/remotestorage": "^1.0",
     "railroad/resora": ">=1.0.10 <1.1",
     "railroad/response": "^1.0",
-    "railroad/usora": "^1.0"
+    "railroad/usora": "^1.0",
+    "ext-redis": "*",
+    "doctrine/orm": "^2.6",
+    "doctrine/data-fixtures": "^1.3",
+    "gedmo/doctrine-extensions": "^2.4",
+    "jms/serializer": "1.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
