--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "railroad/response": "^1.0",
     "railroad/usora": "^2.1",
     "railroad/doctrine": "^0.0",
-    "ext-redis": "*"
+    "ext-redis": "*",
+    "symfony/expression-language": "^4.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
