--- a/composer.json
+++ b/composer.json
@@ -2,20 +2,6 @@
   "name": "railroad/ecommerce",
   "type": "library",
   "description": "Ecommerce system",
-  "repositories": [
-    {
-      "type": "path",
-      "url": "../location"
-    },
-    {
-      "type": "path",
-      "url": "../permissions"
-    },
-    {
-      "type": "path",
-      "url": "../remotestorage"
-    }
-  ],
   "require": {
     "php": "~7",
     "laravel/framework": "5.6.*",
@@ -32,7 +18,8 @@
     "railroad/usora": "^2.1",
     "railroad/doctrine": "^0.0",
     "ext-redis": "*",
-    "symfony/expression-language": "^4.1"
+    "symfony/expression-language": "^4.1",
+    "railroad/doctrine-array-hydrator": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
