--- a/composer.json
+++ b/composer.json
@@ -2,20 +2,8 @@
   "name": "railroad/ecommerce",
   "type": "library",
   "description": "Ecommerce system",
-  "repositories": [
-    {
-      "type": "path",
-      "url": "../location"
-    },
-    {
-      "type": "path",
-      "url": "../permissions"
-    },
-    {
-      "type": "path",
-      "url": "../remotestorage"
-    }
-  ],
+  "prefer-stable": true,
+  "minimum-stability": "RC",
   "require": {
     "php": "~7",
     "laravel/framework": "5.6.*",
@@ -28,8 +16,7 @@
     "railroad/permissions": "^1.0",
     "railroad/remotestorage": "^1.0",
     "railroad/resora": ">=1.0.10 <1.1",
-    "railroad/response": "^1.0",
-    "railroad/usora": "^1.0"
+    "railroad/response": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
