--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "orchestra/testbench": "~3.6",
     "filp/whoops": "~2.1",
     "mockery/mockery": "^1.0",
-    "tymon/jwt-auth": "1.0.0-rc.2"
+    "tymon/jwt-auth": "1.0.0-rc.2",
+    "brianium/paratest": "^2.2"
   },
   "autoload": {
     "psr-4": {
