--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Railroad\\Ecommerce\\Tests\\": "tests/"
+      "Railroad\\Ecommerce\\Tests\\": "tests/",
+      "Railroad\\Ecommerce\\Seeds\\": "seeds/"
     }
   }
 }
