--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
     "railroad/resora": ">=1.0.10 <1.1",
     "railroad/doctrine": "^0.0",
     "ext-redis": "*",
-    "railroad/doctrine-array-hydrator": "^1.0"
+    "railroad/doctrine-array-hydrator": "^1.0",
+    "ext-json": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
