--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "ramsey/uuid": "^3.6",
     "webpatser/laravel-countries": "1.5.4",
     "stripe/stripe-php": "^4.4",
-    "railroad/location": "^1.0",
+    "railroad/location": ">=1.0.2 <1.1",
     "railroad/permissions": "^1.0",
     "railroad/remotestorage": "^1.0",
     "railroad/resora": ">=1.0.10 <1.1",
