--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "railroad/doctrine": "^0.0",
     "ext-redis": "*",
     "railroad/doctrine-array-hydrator": "1.0.*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "aporat/store-receipt-validator": "3.2.*"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
