--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "railroad/doctrine-array-hydrator": "1.0.*",
     "ext-json": "*",
     "aporat/store-receipt-validator": "3.2.*",
-    "railroad/railactionlog": "^0.0"
+    "railroad/railactionlog": "^0.0",
+    "tymon/jwt-auth": "1.0.0-rc.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
@@ -28,7 +29,6 @@
     "orchestra/testbench": "~3.6",
     "filp/whoops": "~2.1",
     "mockery/mockery": "^1.0",
-    "tymon/jwt-auth": "1.0.0-rc.2",
     "brianium/paratest": "^2.2"
   },
   "autoload": {
