--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
     "guzzlehttp/guzzle": "~6.0",
     "doctrine/dbal": "^2.5",
     "ramsey/uuid": "^3.6",
-    "stripe/stripe-php": "^4.4",
     "railroad/location": "^2.0.2",
     "railroad/permissions": "^1.0",
     "railroad/remotestorage": "^1.0",
@@ -20,7 +19,8 @@
     "aporat/store-receipt-validator": "3.2.*",
     "railroad/railactionlog": "1.0.*",
     "tymon/jwt-auth": "1.0.0-rc.2",
-    "ext-openssl": "*"
+    "ext-openssl": "*",
+    "stripe/stripe-php": "^7.95"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.0",
