--- a/composer.json
+++ b/composer.json
@@ -3,33 +3,27 @@
   "type": "library",
   "description": "Ecommerce system",
   "require": {
-    "php": "~7.1",
-    "laravel/framework": "5.6.*",
-    "guzzlehttp/guzzle": "~6.0",
-    "doctrine/dbal": "^2.5",
-    "ramsey/uuid": "^3.6",
-    "railroad/location": "^2.0.2",
-    "railroad/permissions": "^1.0",
-    "railroad/remotestorage": "^1.0",
-    "railroad/resora": ">=1.0.10 <1.1",
+    "php": "^8.1",
+    "laravel/framework": "^9.0",
+    "guzzlehttp/guzzle": "^7.2",
+    "doctrine/dbal": "^3.3",
+    "ramsey/uuid": "^4.3",
+    "railroad/location": "^3.0.0",
+    "railroad/permissions": "^2.0",
+    "railroad/remotestorage": "^2.0",
     "railroad/doctrine": "1.0.*",
-    "ext-redis": "*",
     "railroad/doctrine-array-hydrator": "1.0.*",
+    "ext-redis": "*",
     "ext-json": "*",
-    "aporat/store-receipt-validator": "3.2.*",
-    "railroad/railactionlog": "1.0.*",
-    "tymon/jwt-auth": "1.0.0-rc.2",
     "ext-openssl": "*",
+    "aporat/store-receipt-validator": "4.2.*",
     "stripe/stripe-php": "^7.95"
   },
   "require-dev": {
-    "phpunit/phpunit": "~7.0",
-    "phpunit/php-code-coverage": "6.0.1",
-    "orchestra/database": "3.6.x@dev",
-    "orchestra/testbench": "~3.6",
-    "filp/whoops": "~2.1",
-    "mockery/mockery": "^1.0",
-    "brianium/paratest": "^2.2"
+    "phpunit/phpunit": "^9.5.10",
+    "phpunit/php-code-coverage": "^9.2.10",
+    "orchestra/testbench": "^7.4",
+    "dms/phpunit-arraysubset-asserts": "^0.4.0"
   },
   "autoload": {
     "psr-4": {
@@ -40,6 +34,12 @@
     "psr-4": {
       "Railroad\\Ecommerce\\Tests\\": "tests/",
       "Railroad\\Ecommerce\\Seeds\\": "seeds/"
+    }
+  },
+  "config": {
+    "allow-plugins": {
+      "kylekatarnls/update-helper": true,
+      "composer/package-versions-deprecated": true
     }
   }
 }
