--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "ext-json": "*",
     "ext-openssl": "*",
     "aporat/store-receipt-validator": "4.2.*",
-    "stripe/stripe-php": "^7.95"
+    "stripe/stripe-php": "^7.95",
+    "ext-pdo": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.10",
