--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
     "ext-openssl": "*",
     "aporat/store-receipt-validator": "4.2.*",
     "stripe/stripe-php": "^7.95",
-    "ext-pdo": "*"
+    "ext-pdo": "*",
+    "railroad/referral": "3.0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.10",
