--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
     "ext-openssl": "*",
     "aporat/store-receipt-validator": "4.2.*",
     "stripe/stripe-php": "^7.95",
-    "ext-pdo": "*",
-    "railroad/referral": "dev-referral-contest"
+    "ext-pdo": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.10",
